<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>

    <string name="upcoming_elections_btn_text">upcoming elections</string>
    <string name="find_my_representatives_btn_text">find my representatives</string>
    <string name="election_frag_title">Upcoming Elections</string>
    <string name="representatives_frag_title">Find Representatives</string>
    <string name="follow_btn_txt">Follow</string>
    <string name="unfollow_btn_txt">Unfollow</string>
    <string name="saved_election_menu_title">Saved Elections</string>>
    <string name="all_elections_menu_title">All Elections</string>
    <string name="election_information_text">Election Information</string>
    <string name="voting_location_btn_text">Voting Location</string>
    <string name="ballot_information_btn_text">Ballot Information</string>
    <string name="no_information_available_msg">No Information available</string>
    <string name="correspondence_address_text">Correspondence Address</string>
    <string name="my_location_btn_text">use my location</string>
    <string name="representative_title_text">My Representatives</string>
    <string name="representative_search_text">Representative Search</string>
    <string name="no_data_available_msg">There is no data available!</string>
    <string name="cd_representative_recyclerview">representativeRecyclerView</string>>
    <string name="hint_add_line_1">Address Line 1</string>
    <string name="hint_add_line_2">Address Line 2</string>
    <string name="hint_city">City</string>
    <string name="hint_zip">Zip Code</string>
    <string name="test_data_election_0">Election 0</string>
    <string name="test_data_election_1">Election 1</string>
    <string name="test_data_election_2">Election 2</string>
    <string name="offline_msg">You are offline.</string>
    <string name="no_address_provided_error_text">Please ensure all address fields are filled.</string>
    <string name="offline_error_text_msg">You are offline.</string>


</resources>
